[package]
name = "icl"
version = "0.1.0"
edition = "2021"
description = "Interactive TUI for building CLI commands"
license = "MIT"
readme = "README.md"
keywords = ["cli", "tui", "interactive", "wizard", "terminal"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "i"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
arboard = "3.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
lru = "0.16.3"

[profile.release]
strip = true
lto = true
